# vst-bridge-android

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  windows-host.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: common_dlls.json  pulseaudio.tzst  rootfs_patches.tzst  wine_debug_channels.json  wine_startmenu.json
app/src/main/assets/box64/: box64-0.4.0.tzst  env_vars.json
app/src/main/assets/dxwrapper/: vkd3d-2.14.1.tzst
app/src/main/assets/graphics_driver/: turnip-26.1.0.tzst  virgl-23.1.9.tzst  vortek-2.1.tzst  zink-22.2.5.tzst
app/src/main/assets/inputcontrols/profiles/: controls-4.icp
app/src/main/assets/runtime/: manifest.json
app/src/main/assets/wallpapers/wallpaper-1/: config.json
app/src/main/assets/wallpapers/wallpaper-2/: config.json
app/src/main/assets/wallpapers/wallpaper-3/: config.json
app/src/main/assets/wincomponents/: vcrun2005.tzst  wincomponents.json  xaudio.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gladiorenderer/: CMakeLists.txt
app/src/main/cpp/gladiorenderer/include/: arb_program.h  attrib_stack.h  compressed_texture.h  gl_buffer.h  gl_client_state.h  gl_context.h  gl_dsa.h  gl_formats.h  gl_framebuffer.h  gl_query.h  gl_renderer.h  gl_texture.h  gl_vao.h  gladio.h  request_handler.h  shader_chunks.h  shader_converter.h  shader_material.h  texture_utils.h
app/src/main/cpp/gladiorenderer/src/: arb_program.c  attrib_stack.c  compressed_texture.c  gl_buffer.c  gl_context.c  gl_formats.c  gl_framebuffer.c  gl_query.c  gl_renderer.c  gl_texture.c  gl_vao.c  main.c  request_handler.c  shader_material.c
app/src/main/cpp/virglrenderer/: CMakeLists.txt
app/src/main/cpp/virglrenderer/server/: virgl_server.c  virgl_server.h  virgl_server_renderer.c
app/src/main/cpp/virglrenderer/src/: vrend_renderer.c
app/src/main/cpp/vortekrenderer/: CMakeLists.txt
app/src/main/cpp/vortekrenderer/include/: async_pipeline_creator.h  bc_decoder.h  request_handler.h  resource_memory.h  shader_inspector.h  texture_decoder.h  timeline_semaphore.h  vk_context.h  vk_object.h  vortek.h  vulkan_helper.h  vulkan_wrapper.h  xwindow_swapchain.h
app/src/main/cpp/vortekrenderer/src/: async_pipeline_creator.c  main.c  request_handler.c  resource_memory.c  shader_inspector.c  texture_decoder.c  timeline_semaphore.c  vk_context.c  vk_object.c  vulkan_helper.c  xwindow_swapchain.c
app/src/main/cpp/winlator/: CMakeLists.txt
app/src/main/cpp/winlator/include/: arrays.h  dma_utils.h  events.h  file_utils.h  image_utils.h  jni_utils.h  mat4.h  native_handle.h  ring_buffer.h  socket_utils.h  sysvshared_memory.h  thread_pool.h  time_utils.h  vec3.h  winlator.h
app/src/main/cpp/winlator/src/: arrays.c  drawable.c  gpu_helper.c  gpu_image.c  ring_buffer.c  sysvshared_memory.c  wine_registry_editor.c  xconnector_epoll.c  xinput_stream.c  xoutput_stream.c
app/src/main/java/com/winlator/: BaseFileManagerFragment.java  ContainerDetailFragment.java  ContainerFileManagerFragment.java  ContainersFragment.java  ControlsEditorActivity.java  ExternalControllerBindingsActivity.java  InputControlsFragment.java  MainActivity.java  ShortcutsFragment.java  XServerDisplayActivity.java
app/src/main/java/com/winlator/alsaserver/: ALSAClient.java  ALSAClientConnectionHandler.java  ALSARequestHandler.java  RequestCodes.java
app/src/main/java/com/winlator/box64/: Box64EditPresetDialog.java  Box64Preset.java  Box64PresetManager.java  Box64Utils.java
app/src/main/java/com/winlator/container/: AudioDrivers.java  Container.java  ContainerManager.java  (+6 more)
app/src/main/res/drawable/: bordered_panel.xml  file_grid_item_background.xml  icon_background.xml  left_side_button.xml  list_item_divider.xml  number_picker_background.xml  progress_bar_indeterminate_dark.xml  progress_bar_indeterminate_light.xml  right_side_button.xml  tab_layout_background.xml  table_head_background.xml  tagged_selection_box.xml  tagged_selection_box_button.xml
app/src/main/res/layout/: about_dialog.xml  active_window_list_item.xml  active_windows_dialog.xml  audio_driver_config_dialog.xml  base_file_manager_fragment.xml  binding_field.xml  box64_edit_preset_dialog.xml  container_detail_fragment.xml  container_list_item.xml  container_storage_info_dialog.xml  content_dialog.xml  control_element_settings.xml  controls_editor_activity.xml  create_folder_dialog.xml  custom_toast.xml  download_progress_dialog.xml  drive_list_item.xml  dxvk_config_dialog.xml  external_controller_bindings_activity.xml  external_controller_list_item.xml  file_grid_item.xml  file_info_dialog.xml  file_list_item.xml  frame_rating.xml  gamepad_player_config_dialog.xml  image_picker_list_item.xml  image_picker_view.xml  input_controls_dialog.xml  input_controls_fragment.xml  installed_wine_list_item.xml  magnifier_view.xml  main_activity.xml  main_menu_header.xml  preloader_dialog.xml  process_info_list_item.xml  screen_effect_dialog.xml  simple_list_item_multiple_choice.xml  simple_list_item_single_choice.xml  soundfont_test_dialog.xml  tagged_selection_box.xml  (+12 more)
app/src/main/res/menu/: container_file_manager_menu.xml  container_popup_menu.xml  containers_menu.xml  drive_search_popup_menu.xml  file_manager_popup_menu.xml  main_menu.xml  open_file_popup_menu.xml  process_popup_menu.xml  shortcuts_menu.xml  xserver_menu.xml
app/src/main/res/values/: colors.xml  styles.xml  winlator_attrs.xml  winlator_strings.xml  winlator_styles.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-v27/: styles.xml
docs/: ROADMAP.md  RUNTIME_PROTOCOL.md  RUNTIME_QUICKSTART.md  WINLATOR_INTEGRATION.md
host/: CMakeLists.txt  README.md
host/src/: main.cpp  vst2_editor.cpp  vst2_editor.h  vst2_scanner.cpp  vst2_scanner.h
host/tests/: fake_vst2.cpp
(+171 files in other folders)
